Fixed footer copyright alignment issue.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -434,14 +434,6 @@ div#footer-container {
   background-position: right 10px bottom;
 }
 
-#footer-footer p {
-  width: 500px;
-  height: 27px;
-  opacity: 0.4;
-  font-weight: 300;
-  margin-left: 38px;
-}
-
 #footer-container p {
   text-align: center;
 }
@@ -460,3 +452,13 @@ div#footer-container {
     margin-right: 20px;
   }
 }
+
+#footer-footer p {
+  width: 500px;
+  height: 27px;
+  opacity: 0.4;
+  font-weight: 300;
+  margin-left: 38px;
+  text-align: left;
+}
+
